# DisableFallout4VRFavoritesMenu

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  INSTALL  LICENSE.md  README.md
.github/workflows/: build.yaml
src/: main.cpp
src/f4sevr/: PluginAPI.h
